# nnfs-rust

./: .gitignore  .pylintrc  Cargo.toml  README.md  main.rs  model-biases.pkl  model-weights.pkl  model.pth  sine_data.py
output/: ch11-adam-l0.001-d0-e0.0000001-b1_0.9-b2_0.999-epochs.csv  ch11-adam-l0.05-d0.0000005-e0.0000001-b1_0.9-b2_0.999-epochs.csv  ch11-sdg-l1-d0-m0-epochs.csv
src/: accuracy.rs  activation_functions.rs  analysis_functions.rs  ch10.rs  ch18.rs  ch19.rs  ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  ch9.rs  data.rs  lib.rs  loss_functions.rs  main.rs  model.rs  neurons.rs  nnfs_ch14.py  optimizer.rs  pytorch_comparison.py  report.rs  util.rs
src/ch10/: cli.rs  mod.rs  network.rs
src/ch11/: cli.rs  mod.rs  network.rs
src/ch14/: cli.rs  mod.rs  network.rs
src/ch15/: cli.rs  mod.rs  network.rs
src/ch16/: cli.rs  mod.rs  network.rs
src/ch17/: cli.rs  mod.rs  network.rs
src/optimizer/: ada_grad.rs  adam.rs  mod.rs  rms_prop.rs  sdg.rs
