[package]
name = "nnfs-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
colorgrad = "0.6.2"
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
ndarray-rand = "0.14.0"
plotters = "0.3.4"
rand = "0.8.5"
